# TDD_CMAKE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_dependencies.sh  run.sh  test.sh
.github/workflows/: ci.yml  tdd_ci.yml
Benchmarks/: bv_5.qasm  bv_6.qasm  testGN.qasm  tiny2.qasm
Benchmarks/result/: GNCommunity.csv  GREEDY.csv  KaHyPar.csv  PartitionScheme1.csv  PartitionScheme2.csv  visualize.py
code/: Cir_import.h  CircuitOptimizer.cpp  CircuitOptimizer.hpp  Definitions.hpp  Permutation.hpp  QuantumComputation.cpp  QuantumComputation.hpp  main.cpp
code/dd/: Complex.hpp  ComplexCache.hpp  ComplexNumbers.hpp  ComplexTable.hpp  ComplexValue.hpp  ComputeTable.hpp  ContractionOptimizer.cpp  ContractionOptimizer.hpp  ContractionTree.hpp  Control.hpp  DDpackageConfig.hpp  Definitions.hpp  Edge.cpp  Edge.hpp  Export.hpp  GateMatrixDefinitions.hpp  Graph.hpp  Node.cpp  Node.hpp  Operations.cpp  Operations.hpp  Package.hpp  Package_fwd.hpp  Tdd.hpp  Tensor.hpp  UniqueTable.hpp
code/operations/: ClassicControlledOperation.hpp  CompoundOperation.hpp  Control.hpp  Expression.cpp  Expression.hpp  NonUnitaryOperation.cpp  NonUnitaryOperation.hpp  OpType.hpp  Operation.cpp  Operation.hpp  StandardOperation.cpp  StandardOperation.hpp  SymbolicOperation.cpp  SymbolicOperation.hpp
config/: kahypar_config.ini
